syntax = "proto3";

package tarus.api.judge.oci;

import "google/protobuf/timestamp.proto";

option go_package = "tarus/;tarus";

message OCIJudgeSession {

  // StartedAt provides the time session begin.
  google.protobuf.Timestamp created_at = 1;

  // UpdatedAt provides the last time of a successful write.
  google.protobuf.Timestamp updated_at = 2;

  int32 commit_status = 3;
  int32 worker_id = 4;
  string container_id = 5;
  string bin_target = 6;

  string host_workdir = 101;
}
